--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "laravel/tinker": "^2.8",
         "realrashid/sweet-alert": "^7.2",
         "spatie/laravel-permission": "^6.10",
-        "stancl/tenancy": "^3.8"
+        "stancl/tenancy": "^3.8",
+        "tymon/jwt-auth": "^2.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
